<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_home_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/lightGray">

        <EditText
            android:id="@+id/edit_add_article_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_articles_title_hint"
            android:layout_marginHorizontal="18dp"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="24dp"
            android:paddingVertical="20dp"
            android:elevation="3dp"
            android:textColorHint="@color/txtHint"
            android:background="@drawable/white_round_bg"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_add_article_pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_articles_page_hint"
            android:paddingHorizontal="10dp"
            android:layout_marginHorizontal="18dp"
            android:elevation="3dp"
            android:layout_marginTop="24dp"
            android:paddingVertical="20dp"
            android:textColorHint="@color/txtHint"
            android:background="@drawable/white_round_bg"
            app:layout_constraintTop_toBottomOf="@id/edit_add_article_title" />

        <EditText
            android:id="@+id/edit_add_article_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_articles_content_hint"
            android:layout_marginHorizontal="18dp"
            android:elevation="3dp"
            android:layout_marginTop="24dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp"
            android:textColorHint="@color/txtHint"
            android:background="@drawable/white_round_bg"
            app:layout_constraintTop_toBottomOf="@id/edit_add_article_pages" />

        <!--查询按钮-->
        <Button
            android:id="@+id/btn_select_articles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_select"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_select_bg"
            app:layout_constraintTop_toBottomOf="@id/edit_add_article_content"
            app:layout_constraintEnd_toStartOf="@id/btn_add_articles"
            app:layout_constraintStart_toStartOf="parent"/>

        <!--添加按钮-->
        <Button
            android:id="@+id/btn_add_articles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_add_bg"
            app:layout_constraintTop_toBottomOf="@id/edit_add_article_content"
            app:layout_constraintStart_toEndOf="@id/btn_select_articles"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/txt_display_select_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:paddingHorizontal="15dp"
            android:paddingVertical="20dp"
            app:layout_constraintTop_toBottomOf="@id/btn_add_articles"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>